Fix song name overflow

--- a/frontend/src/app/modules/shared/song-row/song-row.component.sass
+++ b/frontend/src/app/modules/shared/song-row/song-row.component.sass
@@ -67,6 +67,8 @@
     display: flex
     text-align: center
     align-items: center
+    span 
+        @extend %ellipsis-overflow
     .ui.input
         height: 20px
         width: 70%
